// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConsentManager /> parses tenant setting and user to show active destinations in categories admin user acts properly when all disabled 1`] = `
Object {
  "advertising": Array [],
  "analytics": Array [],
  "functional": Array [],
}
`;

exports[`<ConsentManager /> parses tenant setting and user to show active destinations in categories admin user acts properly when all enabled 1`] = `
Object {
  "advertising": Array [],
  "analytics": Array [
    "google_analytics",
    "satismeter",
  ],
  "functional": Array [
    "intercom",
  ],
}
`;

exports[`<ConsentManager /> parses tenant setting and user to show active destinations in categories admin user acts properly when only satismeter disabled 1`] = `
Object {
  "advertising": Array [],
  "analytics": Array [
    "google_analytics",
  ],
  "functional": Array [
    "intercom",
  ],
}
`;

exports[`<ConsentManager /> parses tenant setting and user to show active destinations in categories super admin user acts properly when all disabled 1`] = `
Object {
  "advertising": Array [],
  "analytics": Array [],
  "functional": Array [],
}
`;

exports[`<ConsentManager /> parses tenant setting and user to show active destinations in categories super admin user acts properly when all enabled 1`] = `
Object {
  "advertising": Array [],
  "analytics": Array [
    "google_analytics",
  ],
  "functional": Array [],
}
`;

exports[`<ConsentManager /> parses tenant setting and user to show active destinations in categories unsingned user acts properly when all disabled 1`] = `
Object {
  "advertising": Array [],
  "analytics": Array [],
  "functional": Array [],
}
`;

exports[`<ConsentManager /> parses tenant setting and user to show active destinations in categories unsingned user acts properly when all enabled 1`] = `
Object {
  "advertising": Array [],
  "analytics": Array [
    "google_analytics",
  ],
  "functional": Array [],
}
`;

exports[`<ConsentManager /> passes down preferences and preferences handling previously refused initializes preferences object correctly 1`] = `
Object {
  "google_analytics": false,
  "intercom": false,
  "satismeter": false,
}
`;
